--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "@vitejs/plugin-react-swc": "^4.2.1",
+    "@zxing/browser": "^0.1.5",
+    "expo-barcode-scanner": "^13.0.1",
     "lucide-react": "^0.553.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-native-camera": "^4.2.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
