--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-native-camera": "^4.2.1",
+    "react-router-dom": "^7.10.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
