--- a/package.json
+++ b/package.json
@@ -1,39 +1,26 @@
 {
   "name": "consulteja",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "install:all": "npm install && npm install --prefix backend && npm install --prefix frontend",
+    "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
+    "build": "npm run build --prefix backend && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend"
   },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.17",
-    "@vitejs/plugin-react-swc": "^4.2.1",
-    "@zxing/browser": "^0.1.5",
-    "expo-barcode-scanner": "^13.0.1",
-    "lucide-react": "^0.553.0",
-    "papaparse": "^5.5.3",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-native-camera": "^4.2.1",
-    "react-router-dom": "^7.10.1",
-    "xlsx": "^0.18.5"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vermilion-sharks/consulteja.git"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "module",
+  "bugs": {
+    "url": "https://github.com/vermilion-sharks/consulteja/issues"
+  },
+  "homepage": "https://github.com/vermilion-sharks/consulteja#readme",
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
-    "vite": "^7.1.7"
+    "concurrently": "^9.2.1"
   }
 }
