--- a/backend/package.json
+++ b/backend/package.json
@@ -24,8 +24,9 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.3",
+    "node-cron": "^4.2.1",
     "pg": "^8.16.3",
-    "validator": "^13.15.26"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/argon2": "^0.14.1",
@@ -36,7 +37,6 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
-    "@types/validator": "^13.15.10",
     "prisma": "^7.2.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
