--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "install:all": "npm install && npm install --prefix backend && npm install --prefix frontend",
-    "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
-    "build": "npm run build --prefix backend && npm run build --prefix frontend",
-    "build:frontend": "npm run build --prefix frontend",
-    "build:backend": "npm run build --prefix backend",
-    "start": "npm run start --prefix backend"
+    "install:all": "pnpm -C backend install && pnpm -C frontend install",
+    "dev": "concurrently \"pnpm -C backend dev\" \"pnpm -C frontend dev\"",
+    "build": "pnpm -C backend build && pnpm -C frontend build",
+    "build:frontend": "pnpm -C frontend build",
+    "build:backend": "pnpm -C backend build",
+    "start": "pnpm -C backend start"
   },
   "repository": {
     "type": "git",
