Gerenciamento da API pelo site pronto, só falta a public API

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -23,7 +23,8 @@
       "@services/*": ["services/*"],
       "@tasks/*": ["tasks/*"],
       "@utils/*": ["utils/*"],
-      "@schemas/*": ["schemas/*"]
+      "@schemas/*": ["schemas/*"],
+      "@validators/*": ["validators/*"]
     },
     "noEmit": false,
     "allowSyntheticDefaultImports": true,
