Sistema de login com google implementado (exige testes)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,6 @@ DATABASE_URL="urldobd.com.br"
 
 # * Ambiente de desenvolvimento
 NODE_ENV="development"
+
+# * Client Id for Google Auth
+GOOGLE_CLIENT_ID="clientId"
