--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.3",
     "node-cron": "^4.2.1",
     "pg": "^8.16.3",
+    "ua-parser-js": "^2.0.7",
     "zod": "^4.3.5"
   },
   "devDependencies": {
