Adicionando alias para routers

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -19,7 +19,7 @@
       "@interfaces/*": ["interfaces/*"],
       "@middlewares/*": ["middlewares/*"],
       "@models/*": ["models/*"],
-      "@routes/*": ["routes/*"],
+      "@routers/*": ["routers/*"],
       "@services/*": ["services/*"],
       "@tasks/*": ["tasks/*"],
       "@utils/*": ["utils/*"],
